fix collapse styling

--- a/popup.html
+++ b/popup.html
@@ -24,7 +24,7 @@
     <div class="card">
       <div class="card-header" id="headingOne">
         <h5 class="mb-0">
-          <button id="timerSettingCollapse" class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+          <button id="timerSettingCollapse" class="btn btn-link off" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
             Timer Settings
           </button>
         </h5>
@@ -80,8 +80,8 @@
     <div class="card">
       <div class="card-header" id="headingTwo">
         <h5 class="mb-0">
-          <button id="notifSettingCollapse" class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-            Notification Settings
+          <button id="notifSettingCollapse" class="btn btn-link off collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+            Notification
           </button>
         </h5>
       </div>
@@ -147,10 +147,10 @@
         </div>
       </div>
     </div>
-    <div class="card">
+    <div class="card ">
       <div class="card-header" id="headingThree">
         <h5 class="mb-0">
-          <button id="currentTimerCollapse" class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+          <button id="currentTimerCollapse" class="btn btn-link off collapsed " data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
             Current Timer
           </button>
         </h5>
