add more secure error handling to url parsing conditions

--- a/popup.html
+++ b/popup.html
@@ -15,9 +15,10 @@
     <div id="titleScreen" class="container">
       <h1 id="title">Scroll Companion</h1>
     </div>
-    <div class="titleScreenButtons">
+    <div class="titleScreenButtons class="btn-group btn-group-toggle"">
       <button class="off btn" id="onButton">Off</button>
       <button class="off btn" id="darkModeButton">Darkmode</button>
+      <button class="off btn" id="loadButton">Load Timer</button>
     </div>
   </div>
   <div id="accordion">
