fix notification title not setting on user input

--- a/popup.html
+++ b/popup.html
@@ -13,7 +13,7 @@
   <!-- <img src="./images/waterfall_1080.gif" id="waterfallImg"> -->
   <div class="lightMode" id="holder">
     <div id="titleScreen" class="container">
-      <h1 id="title">Scroll Companion</h1>
+      <h1 id="titleH1">Scroll Companion</h1>
     </div>
     <div class="titleScreenButtons class="btn-group btn-group-toggle"">
       <button class="off btn" id="onButton">Off</button>
@@ -38,7 +38,7 @@
                 <div>
                   <label for="timerLength">Set Timer For:</label>
                   <div id="minuteButtonHolder" class="btn-group btn-group-toggle" data-toggle="buttons">
-                    <label id="fiveMin" class="btn on">
+                    <label id="fiveMin" class="btn off">
                       <input id="fiveMinInput" value="5" name="minRadioButtons" type="radio" class="radio">5</input>
                     </label>
                     <label id="tenMin" class="btn off">
