add 'type' to messages to diferrentiate load settings and new settings

--- a/popup.html
+++ b/popup.html
@@ -15,11 +15,16 @@
     <div id="titleScreen" class="container">
       <h1 id="titleH1">Scroll Companion</h1>
     </div>
-    <div class="titleScreenButtons class="btn-group btn-group-toggle"">
+    
+    <div class="titleScreenButtons" class="btn-group btn-group-toggle"">
       <button class="off btn" id="onButton">Off</button>
       <button class="off btn" id="darkModeButton">Darkmode</button>
+      <div class="popup">
+        <span id="errorPopup" class="popupText">No Saved Data</span>
+      </div>
       <button class="off btn" id="loadButton">Load Timer</button>
     </div>
+
   </div>
   <div id="accordion">
     <div class="card">
