add documentation for use

--- a/popup.html
+++ b/popup.html
@@ -107,7 +107,7 @@
                 <label class="notifLabels for="message">Message:</label>
                 <input type="text" id="message" class="textInput"/>
                 <br/>
-                <label for="eventTime" class="notifLabels">Event Time:</label>
+                <label for="eventTime" class="notifLabels">Event Time(in milliseconds):</label>
                 <input type="number" id="eventTime" class="textInput"/>
                 <br/>
                 <span class="notifLabels">Require Interaction:</span>
